# GitOnboard

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  analyze_graph.js  analyze_graph.py  architecture.md  docker-compose.yml  patch_call_graph.py  pyproject.toml  setup.md
.agents/: AGENTS.md
.agents/rules/: 01-general-rules.md  02-project-structure.md  03-code-quality.md  04-architecture.md  05-dependencies.md  06-documentation-testing.md  07-workflow.md  08-project-rules.md  09-things-you-must-never-do.md
.githooks/: pre-push
.github/workflows/: prevent-stale-pr.yml
archive/legacy/: README.md
backend/: Dockerfile  config.py  database.py  llm_service.py  main.py  task_manager.py  test_db.py
backend/dependencies/: auth.py
backend/intelligence/: __init__.py  builder.py  feature_tracing.py  parser.py  pipeline.py  query_layer.py  (+2 more)
docs/: extending_framework.md
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
reports/: 00-coverage-report.md  00-executive-summary.md  01-project-architecture.md  02-runtime-flow.md  03-module-dependency-graph.md  04-function-call-graph.md  05-function-analysis.md  06-dead-code-report.md  07-wiring-validation.md  08-frontend-backend-integration.md  09-api-mapping.md  10-feature-traceability.md  11-configuration-audit.md  12-architectural-smells.md  13-risk-assessment.md  14-refactoring-roadmap.md  README.md
tests/: test_auth_hardening.py  test_context_builder.py  test_cycle_analyzer.py  test_feature_discovery.py  test_framework.py  test_layer_analyzer.py  test_metrics_analyzer.py
(+257 files in other folders)
