[project]
name = "repository-intelligence-platform"
version = "0.1.0"
description = "Repository Intelligence Platform - MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
